# SNAP

./: .gitignore  .npmignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml
adapters/magicblock/: README.md
docs/: devnet-contract-deploy.md  game-dev-migration-playbook.md  magicblock-er-devnet-settlement.md  magicblock-vrf-integration.md  multiplayer-authority-engine.md  provenance-registry.md  snap-randomness-module.md  vrf-engine-architecture.md  web2-team-quickstart.md
examples/: demo-migrated-games.ts  js-hosted-multiplayer-client.ts  magicblock-vrf-adapter-example.ts  magicblock-vrf-idl-codec-example.ts  multiplayer-authority-client.ts  provenance-registry-client.ts  vrf-engine-client.ts
programs/snap-multiplayer-authority/: Cargo.toml  README.md
programs/snap-multiplayer-authority/src/: lib.rs
programs/snap-provenance-registry/: Cargo.toml
programs/snap-provenance-registry/src/: lib.rs
programs/snap-vrf-engine/: Cargo.toml  README.md
programs/snap-vrf-engine/idl/: snap_vrf_engine.min.json
programs/snap-vrf-engine/src/: lib.rs
scripts/: build-browser.mjs  magicblock-er-doctor.mjs  set-program-ids.mjs
src/: browser.ts  index.ts  sim-wager.ts  sim.ts
src/adapters/: index.ts  localSnapClient.ts  magicBlockSnapClient.ts  signalLocalAdapter.ts  snapClient.ts  snapGoldenClients.ts  snapMultiplayerClient.ts  snapProvenanceClient.ts  snapRandomnessClient.ts
tests/: snap-multiplayer-authority.ts  snap-provenance-registry.ts  snap-vrf-engine.ts
(+71 files in other folders)
