[package]
name = "snap-vrf-engine"
version = "0.1.0"
description = "Reusable verifiable randomness engine for SNAP on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snap_vrf_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3.0"
